--- a/TLS-Server-Scanner/pom.xml
+++ b/TLS-Server-Scanner/pom.xml
@@ -31,6 +31,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>tls-scanner-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.upb.cs</groupId>
+            <artifactId>OverlappingFragments</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
