--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
         <dependency>
             <groupId>de.rub.nds.tls.attacker</groupId>
             <artifactId>tls-core</artifactId>
+            <version>5.3.0</version>
         </dependency>
         <dependency>
             <groupId>de.rub.nds.tls.attacker</groupId>
